# workflow

./: .gitignore  README.md
daily-report/: .env.example  config.py  pyproject.toml  requirements.txt
daily-report/src/daily_report/: __init__.py  __main__.py  config.py  graph.py  prompts.py  scheduler.py  state.py
daily-report/src/daily_report/nodes/: __init__.py  fetch_github.py  generate.py  merge_input.py  send_email.py
